# vm0

./: .gitignore  CMakeLists.txt  CMakeUtils.txt  main.c
std/: CMakeLists.txt  base.h  com.h  dbg.h  mem.c  mem.h  type.h
vm/: CMakeLists.txt  alloc.h  instr.h  stack.c  stack.h  type.h  value.h  vm.h
